--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
     <p>This is the official student website of</p>
     <h2>Huseyn Mirjavadov</h2>
     <p>Student at <strong>TalTech — Tallinn University of Technology</strong></p>
-    <p><strong>Uni-ID:</strong> huseyn@taltech.ee</p>
+    <p><strong>Uni-ID:</strong> <a href="mailto:huseyn@taltech.ee">huseyn@taltech.ee</a>
+    </p>
     <p>Coursework: Domain Registration & Web Hosting Assignment</p>
-    <p>Email: <a href="mailto:huseyn.mircavadov@gmail.com">huseyn.mircavadov@gmail.com</a></p>
+    <p><strong>Email:</strong> <a href="mailto:huseyn.mircavadov@gmail.com">huseyn.mircavadov@gmail.com</a>
+    </p>
     <p>Deployed with GitHub Pages & Namecheap — Secured by GitHub Pages HTTPS</p>
   </div>
 </body>
 </html>
+
 
